--- a/lesson6/style.scss
+++ b/lesson6/style.scss
@@ -1619,6 +1619,10 @@ svg:hover .icon{
     display: none;
   }
 
+  .product3_hidden {
+    display: none;
+  }
+
   .bannerinfoProduct__overlay {
     height: 601px;
     margin-top: 0;
