--- a/lesson6/style.scss
+++ b/lesson6/style.scss
@@ -2124,6 +2124,10 @@ svg:hover .icon{
 
   }
 
+  .products.container {
+    max-width: 360px;
+  }
+
   .registration.container {
     max-width: 360px;
   }
