--- a/lesson6/style.css
+++ b/lesson6/style.css
@@ -1660,7 +1660,7 @@ svg:hover .icon {
   .productsCatalog.container {
     max-width: 360px;
   }
-  .product3_hidden {
+  .product3p_hidden {
     display: none;
   }
   .bannerinfoProduct__background {
