--- a/lesson6/style.scss
+++ b/lesson6/style.scss
@@ -1941,6 +1941,10 @@ svg:hover .icon{
     display: none;
   }
 
+  .product3_hidden {
+    display: none;
+  }
+
   .bannerinfoProduct__background{
     margin-top: 84.6px;
     width: 374px;
